<resources>
    <string name="app_name">Edu4Sports</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_longout">Log Out</string>

    <string name="menu_home">Profile</string>

    <string name="menu_course">My Course</string>
    <string name="menu_subscription">My Subscription</string>
    <string name="menu_gallery">My Payment</string>
    <string name="menu_slideshow">All Courses</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_rating">Your Rating</string>
    <string name="home_second">Home Second</string>
    <string name="spinner_title">Select Payment Type</string>
</resources>
