<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_courses"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_account_balance_wallet_24"
            android:title="@string/menu_subscription" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_baseline_contact_mail_24"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_phone_android_24"
            android:title="Fitness Test"
            android:visible="false"/>

    </group>
    <item android:title="Action Tools">
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/menu_edit_profile" />
            <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_baseline_star_border_24"
                android:title="@string/menu_rating" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="Share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_power_settings_new_24"
                android:title="Logout" />
        </menu>
    </item>
</menu>
